# homelab-ai-sentinel

./: .betterleaksignore  .dockerignore  .env.example  .gitignore  .secrets.env.example  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  gunicorn.conf.py  llms.txt  main.py  pyrightconfig.json  requirements.in  requirements.txt  setup-repo.sh  smithery.yaml
.claude/: settings.json
app/: __init__.py  actions.py  alert_db.py  alert_parser.py  api.py  claude_client.py  config_validator.py  context.py  correlation.py  discord_client.py  email_client.py  gemini_client.py  gotify_client.py  housekeeper.py  imessage_client.py  llm_client.py  matrix_client.py  mcp.py  metrics.py  morning_brief.py  notify.py  notify_common.py  ntfy_client.py  openai_compat_client.py  pulse.py  reverse_triage.py  runbooks.py  security.py  shadowing.py  signal_client.py  slack_client.py  sse.py  storm.py  telegram_client.py  thresholds.py  topology.py  utils.py  watchdog.py  webhook.py  whatsapp_client.py
bot/: README.md  bot.py
runbooks/: example_service.md.example  topology.yaml.example
scripts/: glances_poller.py
sentinel_mcp/: README.md  __init__.py  pyproject.toml  server.py
tests/: test_alert_db.py  test_alert_parser.py  test_app.py  test_context.py  test_cooldown.py  test_discord_client.py  test_email_client.py  test_gemini_client.py  test_gotify_client.py  test_imessage_client.py  test_llm_client.py  test_matrix_client.py  test_notify.py  test_ntfy_client.py  test_pulse.py  test_resolution.py  test_runbooks.py  test_security.py  test_signal_client.py  test_storm.py  (+7 more)
(+25 files in other folders)
